# NFDriver

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  appveyor.yml  build.gradle  settings.gradle
.circleci/: config.yml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/spotify/nfdrivertest_android/: MainActivity.java
app/src/main/res/values/: strings.xml
buildconf/: bridge.json
ci/: README.md  android.py  androidlinux.py  androidwindows.py  build_options.py  ci.json  ios.py  linux.py  linux.sh  linuxschroot.sh  nfbuild.py  nfbuildlinux.py  nfbuildosx.py  nfbuildwindows.py  osx.py  osx.sh  windows.ps1  windows.py
gradle/wrapper/: gradle-wrapper.properties
include/NFDriver/: NFDriver.h
libraries/: CMakeLists.txt  lame.pch.h
source/: CMakeLists.txt  NFDriver.cpp  NFDriverAdapter.cpp  NFDriverAdapter.h  NFDriverFileAACImplementation.cpp  NFDriverFileAACImplementation.h  NFDriverFileImplementation.cpp  NFDriverFileImplementation.h  NFDriverFileMP3Implementation.cpp  NFDriverFileMP3Implementation.h  NFDriver_Android.cpp  NFDriver_Linux.cpp  NFDriver_MacOSX.cpp  NFDriver_Windows.cpp  NFDriver_iOS.mm
source/cli/: CMakeLists.txt  NFDriverCLI.cpp
tools/: generate-version.py
